WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42768
[chromium] fast/forms/input-file-directory-upload.html fails on win after
r63454
https://bugs.webkit.org/show_bug.cgi?id=42768
Summary
[chromium] fast/forms/input-file-directory-upload.html fails on win after r63454
Ojan Vafai
Reported
2010-07-21 10:21:10 PDT
Looks like the issue is that the paths have backslashes instead of forward slashes. Does the relevant spec comment on this? I think we should normalize to forward slashes. The web shouldn't need to deal with mixed slashes.
Attachments
Patch
(1.64 KB, patch)
2010-07-21 19:10 PDT
,
John Gregg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Gregg
Comment 1
2010-07-21 10:22:01 PDT
Agreed, we should normalize to forward slashes, I'm working on a patch
John Gregg
Comment 2
2010-07-21 19:10:29 PDT
Created
attachment 62254
[details]
Patch
WebKit Review Bot
Comment 3
2010-07-21 19:14:14 PDT
Attachment 62254
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/html/HTMLInputElement.cpp:2001: Missing spaces around / [whitespace/operators] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kent Tamura
Comment 4
2010-07-21 22:02:00 PDT
Comment on
attachment 62254
[details]
Patch ok.
WebKit Commit Bot
Comment 5
2010-07-22 10:23:12 PDT
Comment on
attachment 62254
[details]
Patch Rejecting patch 62254 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 20707 test cases. animations/play-state.html -> failed Exiting early after 1 failures. 123 tests run. 13.24s total testing time 122 test cases (99%) succeeded 1 test case (<1%) had incorrect layout Full output:
http://queues.webkit.org/results/3581339
Ojan Vafai
Comment 6
2010-07-22 10:48:12 PDT
> animations/play-state.html -> failed
This test looks to have gotten flaky recently. Likely from
http://trac.webkit.org/changeset/63862/
. See
http://crbug.com/49920
for more details.
John Gregg
Comment 7
2010-07-22 13:05:29 PDT
Comment on
attachment 62254
[details]
Patch okay if it's just flaky i'll try CQ one more time
WebKit Commit Bot
Comment 8
2010-07-22 14:27:10 PDT
Comment on
attachment 62254
[details]
Patch Clearing flags on attachment: 62254 Committed
r63914
: <
http://trac.webkit.org/changeset/63914
>
WebKit Commit Bot
Comment 9
2010-07-22 14:27:16 PDT
All reviewed patches have been landed. Closing bug.
John Gregg
Comment 10
2010-07-22 18:00:18 PDT
Committed
r63932
: <
http://trac.webkit.org/changeset/63932
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug