2010-07-22  John Gregg  <johnnyg@google.com>

Reviewed by Kent Tamura.

        [chromium] fast/forms/input-file-directory-upload.html fails on win after r63454
        https://bugs.webkit.org/show_bug.cgi?id=42768

        Normalize path separators for the script API by convering \'s to /'s.

        Covered by input-file-directory-upload.html

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setFileListFromRenderer):

Canonical link: https://commits.webkit.org/54751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63914 268f45cc-cd09-0410-ab3c-d52691b4dbfc